feat: umount added to the file copy

--- a/backend/cmd/configuration.yaml
+++ b/backend/cmd/configuration.yaml
@@ -27,5 +27,5 @@ controller:
   stepTime: 1
   saveTime: 60
   savedRunFolder: ./runs
-  usbPath: /mnt/HD6
+  usbPath: /media/ivano
   usbSaveFolderName: ovenruns
